First lecture finished

--- a/NNs For Dummies 1.ipynb
+++ b/NNs For Dummies 1.ipynb
@@ -10,8 +10,6 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import patches\n",
     "from matplotlib import animation, rc\n",
-    "#rc('animation', html='html5')\n",
-    "\n",
     "\n",
     "from lectures_helpers import animate_poly_minimization, animate_poly_minimization_with_slope\n",
     "\n",
@@ -77,9 +75,24 @@
    "source": [
     "### Об алгоритмах и параметрах\n",
     "\n",
-    "Алгоритмы машинного обучения имеют два типа параметров: **настраиваемые** и **гиперпараметры**. Настраевымые параметры настраиваются автоматически самим алгоритмом на основе данных во время этапа обучения (после него наступает этап предсказания). Собственно этап обучения это и есть настройка параметров. \n",
+    "Алгоритмы машинного обучения имеют два типа параметров: **настраиваемые** (learnable) и **гиперпараметры**. Настраевымые параметры настраиваются автоматически самим алгоритмом на основе данных во время этапа обучения (после него наступает этап предсказания). Собственно этап обучения это и есть настройка параметров. Настраиваемые парметры также еще называют $весами$.\n",
     "\n",
-    "Гиперпараметры устанавливаются вручную \"раз и навсегда\" перед обучением человеком. Такие параметры как правило нельзя эффективно настроить при помощи данных."
+    "Гиперпараметры устанавливаются вручную \"раз и навсегда\" перед обучением человеком. Такие параметры как правило нельзя эффективно настроить при помощи данных.\n",
+    "\n",
+    "Есть некоторые простые правила по которым как правило можно отличить настраевымые параметры от гиперпараметров\n",
+    "* Если параметр принимает только целые значения (1,2,3,... но не 1/2) то это гиперпараметр\n",
+    "* Если параметр отвечает за то, чтобы наша модель не переобучалась (не слишком подгонялась под тренировочные данные, получая в итоге плохой результат на новых данных), то это гиперпараметр.\n",
+    "* В остальных случаях это как правило настраиваемый параметр\n",
+    "\n",
+    "Рассмотример пример. Мы хотим предсказывать цену на нефть сегодня. Предположим, что на нефть сегодня зависит только от $n$ предыдущих дней (с большой точностью). Тогда можно придумать простую модель - в котором цена завтра, это среднее цен за предыдущие $n$ дней взятых с какими то весами. Обозначим цену нефти $i$ дней назад как $p_i$ (от слова price). То есть $p_0$ - это цена сегодня, $p_1$ - это цена вчера, $p_2$ - это цена позавчера и т.д. А веса для каждого из дней обозначим как $w_i$. Тогда мы можем предсказать цену сегодня как\n",
+    "\n",
+    "$$p_0 = \\frac{1}{n}(w_1p_1 + w_2p_2+\\ldots+w_{n}p_{n})$$\n",
+    "\n",
+    "Или используя знак суммации $\\sum$\n",
+    "\n",
+    "$$p_0 = \\frac{1}{n}\\sum_{i=1}^n w_ip_i$$\n",
+    "\n",
+    "Цены за предыдущие дни $p_1, p_2, \\ldots, p_n$ мы знаем. А вот $n$ и $w_1, w_2, \\ldots, w_n$ - это параметры, которые нам надо подобрать. $w$ - в данном случае это настраиваемый параметр, так как он может быть нецелым. В то время как само $n$, количество используемых дней, это гиперпараметр, так как оно принимает только целые значения."
    ]
   },
   {
@@ -126,11 +139,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Постановка задачи\n",
+    "### Задача минимизации\n",
     "\n",
     "Пускай у нас есть некотрая функция, назовем ее $f$, зависящая от параметров $x_1, x_2, \\ldots, x_n$. Мы хотим найти такие значние параметров, что $f$ принимает на них минимальное значение.\n",
     "\n",
-    "В дальнейшем обозначение $f(x_1, x_2, \\ldots, x_n)$ будет обозначать, что функция $f$ зависит от $x_1, x_2, \\ldots, x_n$. Также обозначним  $x_1, x_2, \\ldots, x_n$ одной буквой $x$. $x$ называется **вектором**, то есть упорядоченной последовательностью чисел (или переменных).\n",
+    "В дальнейшем обозначение $f(x_1, x_2, \\ldots, x_n)$ будет обозначать, что функция $f$ зависит от $x_1, x_2, \\ldots, x_n$. Также обозначним  $x_1, x_2, \\ldots, x_n$ одной буквой $x$. $x$ называется **вектором**, то есть упорядоченным рядом чисел (или переменных).\n",
     "\n",
     "В новых обозначениях мы хотим найти такое $x^*$, что $f(x^*)$ минимально."
    ]
@@ -921,7 +934,7 @@
    "source": [
     "### Много параметров\n",
     "\n",
-    "В случае многих параметров (или как говорят в математике, в случае многомерного пространства), подход точно такой же. В трехмерном случае мы проводим касательную плоскость, а в больших размерностях гиперплоскость (не надо представлять - не получится).\n"
+    "В случае многих параметров (или как говорят в математике, в случае многомерного пространства), подход  почти точно такой же. В трехмерном случае мы проводим касательную плоскость, а в больших размерностях гиперплоскость (не надо представлять - не получится) и движимся в сторону наибольшего убывания функции (в сторону где у горки самая больша крутизна спуска).\n"
    ]
   },
   {
@@ -930,16 +943,35 @@
    "source": [
     "### Так зачем все это?\n",
     "\n",
-    "Иинимизация нам нужна чтобы обучить нашу модель. \n",
+    "Минимизация нам нужна чтобы обучить нашу модель. \n",
     "\n",
-    "У нас есть функция потерь, назовем ее $L$, зависящая от параметров модели $\\theta_1, \\theta_2, \\ldots, \\theta_n$. Как мы решили раньше - чем меньше $L$, тем качественней модель. Поэтому минимизируя $L(\\theta)$ мы улучшаем нашу модель или, сказав по другому, *обучаем* ее.\n"
+    "У нас есть функция потерь, назовем ее $L$, зависящая от параметров модели $\\theta_1, \\theta_2, \\ldots, \\theta_n$. Как мы решили раньше - чем меньше $L$, тем качественней модель. Поэтому минимизируя $L(\\theta)$ мы улучшаем нашу модель или, сказав по другому, *обучаем* ее.\n",
+    "\n",
+    "Поэтому процесс обучения модели можно представить как серию оптимизационных шагов, в каждом из которых мы движемся в сторону уменьшения значения функции потерь, немного изменяя значения параметров, пока функция потерь не перестанет уменьшаться. \n",
+    "\n",
+    "<img src=\"pics/ML_Train.png\">\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Логистическая регрессия"
+    "### Что мы скрыли?\n",
+    "\n",
+    "* Как находить производные? (Ответ: используя таблицы производных и простые правила) \n",
+    "* Как находить касательную гиперплость и направление наибольшего убывания? (Ответ: по формулам, используя производные)\n",
+    "* Всегда ли шарик скатится вниз горки? (Ответ: нет, но есть простые способы отследить и избежать \"застревания\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Что дальше?\n",
+    "* Линейные модели для бинарной классификации\n",
+    "* Логистическая регрессия\n",
+    "* Простая нейронная сеть"
    ]
   },
   {
