First lecture symols fix

--- a/NNs For Dummies 1.ipynb
+++ b/NNs For Dummies 1.ipynb
@@ -59,8 +59,8 @@
     "Задачки можно поделить используя две разных классификации.\n",
     "\n",
     "1) По наличию данных:\n",
-    "* У нас есть данные для обучения, которые содержат правильные предсказания. Напрмер, у нас есть картинки где известно где котики а где собачки. Такие задачки называются **обучение с учителем** или **supervised learning**\n",
-    "* У нас есть только сырые данные без примеров правильных предсказаний. Такие задачки называются **обучение без учителя** или **unsupervised learning**\n",
+    "* Если у нас есть данные для обучения, которые содержат правильные предсказания. Напрмер, у нас есть картинки где известно где котики а где собачки. Такие задачки называются **обучение с учителем** или **supervised learning**\n",
+    "* Если у нас есть только сырые данные без примеров правильных предсказаний. Такие задачки называются **обучение без учителя** или **unsupervised learning**\n",
     "\n",
     "2) По типу предсказаний:\n",
     "* Если предсказания это какие то категории: котик/собачка, болен/не болен, красный/синий/зеленый и т.д., то такая задачка называется **классификацией**. Если варианта всего два (котик/собачка) то это **бинарная классификация**.\n",
@@ -75,7 +75,7 @@
    "source": [
     "### Об алгоритмах и параметрах\n",
     "\n",
-    "Алгоритмы машинного обучения имеют два типа параметров: **настраиваемые** (learnable) и **гиперпараметры**. Настраевымые параметры настраиваются автоматически самим алгоритмом на основе данных во время этапа обучения (после него наступает этап предсказания). Собственно этап обучения это и есть настройка параметров. Настраиваемые парметры также еще называют $весами$.\n",
+    "Алгоритмы машинного обучения имеют два типа параметров: **настраиваемые** (learnable) и **гиперпараметры**. Настраевымые параметры настраиваются автоматически самим алгоритмом на основе данных во время этапа обучения (после него наступает этап предсказания). Собственно этап обучения это и есть настройка параметров. Настраиваемые парметры также еще называют **весами**.\n",
     "\n",
     "Гиперпараметры устанавливаются вручную \"раз и навсегда\" перед обучением человеком. Такие параметры как правило нельзя эффективно настроить при помощи данных.\n",
     "\n",
