Fixing image link

--- a/NNs For Dummies 1.ipynb
+++ b/NNs For Dummies 1.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"pics/ML_forward.png\">"
+    "<img src=\"pics/ML_Forward.png\">"
    ]
   },
   {
